# Bondrewd

./: Cargo.toml  README.md  TODO.md  changes.md  secret_format_code_gen.rs
bitfields/: Cargo.toml
bitfields-derive/: Cargo.toml  compile_error.txt
bitfields-derive/examples/: complex.rs  test.rs
bitfields-derive/fuzz/: Cargo.toml
bitfields-derive/src/: lib.rs
bitfields-derive/src/enums/: into_bytes.rs  mod.rs  parse.rs
bitfields-derive/src/structs/: common.rs  from_bytes.rs  into_bytes.rs  mod.rs  parse.rs
bitfields-derive/tests/: be_primitives.rs  block_arrays.rs  ccsds.rs  element_arrays.rs  enum_derives.rs  enum_fields.rs  le_primitives.rs  structs.rs
bitfields/src/: lib.rs
bondrewd/: Cargo.toml
bondrewd-builder/: Cargo.toml
bondrewd-builder/src/: lib.rs
bondrewd-builder/src/common/: field.rs  mod.rs
bondrewd-builder/src/derive/: from.rs  into.rs  mod.rs  quotes.rs
bondrewd-builder/src/masked/: mod.rs
bondrewd-builder/src/parse/: field.rs
bondrewd-builder/src/solved/: array_iter.rs  field.rs  field_set.rs  mod.rs
bondrewd-builder/tests/: block_arrays.rs  element_arrays.rs  enum_fields_custom.rs  headers.rs  new.rs  setters.rs  setup.rs  simple_be.rs  simple_le.rs
bondrewd-derive/: Cargo.toml  really_hardcore_code_gen.rs  secret_format_code_gen.rs
bondrewd-derive-old/: Cargo.toml
bondrewd-derive-old/fuzz/: Cargo.toml
bondrewd-derive-old/fuzz/fuzz_targets/: primitives_le.rs
bondrewd-derive-old/old_examples/: fuzz_enum.rs  ignore_me.rs  reserve.rs
bondrewd-derive-old/old_tests/: be_primitives.rs  ccsds.rs  hard_core.rs  hex.rs
bondrewd-derive-old/src/: lib.rs
bondrewd-derive-old/src/common/: mod.rs  struct.rs
bondrewd-derive-old/src/old_enums/: from_bytes.rs
bondrewd-derive-old/src/parse/: enum.rs  field.rs  mod.rs  object.rs
bondrewd-derive-old/tests/: aligned.rs  be_primitives.rs  block_arrays.rs  ccsds.rs  complex.rs  element_arrays.rs  enum_derives.rs  enum_fields.rs  enum_fields_custom.rs  enum_partial_eq.rs  hard_core.rs  headers.rs  hex.rs  le_primitives.rs  mixed.rs  setters.rs  structs.rs
bondrewd-derive/examples/: aligned.rs  complex.rs  enums.rs  fuzz_enum.rs  ignore_me.rs  issue_12.rs  large_structures.rs  other.rs  person.rs  primitives_be.rs  readme.rs  reserve.rs  simple.rs  test.rs
bondrewd-derive/fuzz/: Cargo.toml
bondrewd-derive/fuzz/fuzz_targets/: big_test.rs  ccsds-from-then-into.rs  enums.rs  primitives_be.rs  primitives_le.rs  test_ale.rs  test_be.rs  test_le.rs
bondrewd-derive/src/: lib.rs
bondrewd-derive/src/built/: field.rs
bondrewd-derive/src/common/: enum.rs  field.rs  mod.rs  object.rs  struct.rs
bondrewd-derive/src/derive/: from.rs  into.rs  mod.rs  quotes.rs
bondrewd-derive/src/enums/: from_bytes.rs  into_bytes.rs  mod.rs  parse.rs  partial_eq.rs
bondrewd-derive/src/masked/: mod.rs
bondrewd-derive/src/old_enums/: into_bytes.rs  partial_eq.rs
bondrewd-derive/src/parse/: common.rs  enum.rs  field.rs  mod.rs  object.rs  struct.rs  struct_fns.rs
bondrewd-derive/src/solved/: array_iter.rs  field.rs  field_set.rs
bondrewd-derive/src/structs/: common.rs  from_bytes.rs  gen.rs  into_bytes.rs  mod.rs  parse.rs  struct_fns.rs
bondrewd-derive/tests/: aligned.rs  be_primitives.rs  block_arrays.rs  ccsds.rs  complex.rs  element_arrays.rs  enum_derives.rs  enum_fields.rs  enum_fields_custom.rs  enum_partial_eq.rs  fuzz_ale.rs  fuzz_be.rs  fuzz_le.rs  hard_core.rs  headers.rs  hex.rs  issues.rs  le_primitives.rs  mixed.rs  new.rs  setters.rs  simple_ale.rs  simple_be.rs  simple_le.rs  structs.rs
bondrewd/src/: error.rs  hex.rs  lib.rs
