[package]
name = "bondrewd-derive"
version = "0.5.0-alpha.4"
edition = "2021"
description = "Bit-Level field packing with builder"
authors = ["Dev <devlynknelson@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bitfields", "serialization", "packing"]
categories = ["data-structures","development-tools"]
readme = "../README.md"
repository = "https://github.com/Devlyn-Nelson/Bondrewd"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
proc-macro2 = { version = "1.0", optional = true}
quote = { version = "1.0", optional = true}
syn = { version = "2.0", features = ["full"], optional = true}
thiserror = "2"
darling = "0.20"

[features]
default = ["derive", "std"]
std = []
derive = ["dep:proc-macro2", "dep:quote" , "dep:syn"]

[dev-dependencies]
rand = "0.8"
anyhow = "1"
bondrewd-old = {package = "bondrewd", registry = "pumpkin-patch", version = "0.2", features = ["dyn_fns", "derive"]}
bondrewd-derive-old = {path = "../bondrewd-derive-old", features = ["dyn_fns"]}
bondrewd = { path = "../bondrewd", features = ["full"]}