[package]
name = "bondrewd-derive"
version = "0.5.0-beta.2"
edition = "2021"
description = "Bit-Level field packing with builder"
authors = ["Dev <devlynknelson@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bitfields", "serialization", "packing"]
categories = ["data-structures","development-tools"]
readme = "../README.md"
repository = "https://github.com/Devlyn-Nelson/Bondrewd"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
proc-macro2 = { version = "1.0"}
quote = { version = "1.0"}
syn = { version = "2.0.87", features = ["full"]}
thiserror = "2.0"
darling = "0.20"

[features]
default = ["std"]
std = []

[dev-dependencies]
rand = "0.8"
anyhow = "1"
# bondrewd-old = {package = "bondrewd", registry = "pumpkin-patch", version = "0.2", features = ["dyn_fns", "derive"]}
bondrewd = { path = "../bondrewd", features = ["full"]}