[package]
name = "bondrewd"
version = "0.2.1"
edition = "2021"
description = "Bit-Level field packing with proc_macros"
authors = ["Dev <devlynknelson@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bitfields", "packed-struct", "bit-compression", "packed-fields", "packing"]
#categories = ["compression","data-structures","development-tools"]
readme = "../README.md"
repository = "https://github.com/Devlyn-Nelson/Bondrewd"

[dependencies]
# bondrewd-derive = { version = "0.4.1", optional = true, registry = "pumpkin-patch" }
bondrewd-derive = { path = "../bondrewd-derive", optional = true }

[features]
default = ["std"]
derive = ["bondrewd-derive"]
dyn_fns = ["bondrewd-derive/dyn_fns"]
hex_fns = ["bondrewd-derive/hex_fns"]
std = []
