[package]
name = "bondrewd"
version = "0.2.2"
edition = "2021"
description = "Bit-Level field packing with proc_macros"
authors = ["Dev <devlynknelson@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bitfields", "serialization", "packing"]
categories = ["data-structures","development-tools"]
readme = "../README.md"
repository = "https://github.com/Devlyn-Nelson/Bondrewd"

[dependencies]
# bondrewd-derive = { version = "0.5.0", optional = true, registry = "pumpkin-patch" }
bondrewd-derive = { path = "../bondrewd-derive", optional = true }

[features]
derive = ["bondrewd-derive"]
dyn_fns = ["bondrewd-derive/dyn_fns"]
hex_fns = ["bondrewd-derive/hex_fns"]
std = []
